# embedded_mysql

./: CMakeLists.txt  main.cpp
